Fix case study summary responsive layout issues

--- a/foundation/theme/layout.scss
+++ b/foundation/theme/layout.scss
@@ -37,14 +37,18 @@ body {
 		}
 		.panel {
 			.featured-image {
-				margin-bottom:1rem;
+				@include breakpoint(medium) {
+					margin-bottom:1rem;
+				}
 				border-top-right-radius: 35px;
 				overflow:hidden;
 			}
 			.project-details {
 				.objective {
 					padding-top:1rem;
-					border-top:1px solid $secondary-color;
+					@include breakpoint(medium) {
+						border-top:1px solid $secondary-color;
+					}
 					.label {
 						margin:0rem;
 						font-weight:600;
